<resources>
    <string name="app_name">ActividadesComplementarias</string>
    <string name="user_name">User Name</string>
    <string name="textUserName">Numero de control</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpass">¿Olvidaste tu contraseña?</string>
    <string name="taphere">Pulsa aquí</string>
    <string name="actividad_complementaria">Actividad Complementaria</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="tipo_actividad">Tipo Actividad:</string>
    <string name="nombre_de_la_actividad">Nombre de la actividad</string>
    <string name="numero_de_control">Numero de Control</string>
    <string name="nombre_de_actividad">Nombre de Actividad:</string>
    <string name="n_mero_de_control">Número de control:</string>
    <string name="fecha">Fecha:</string>
    <string name="matricularme">Matricularme a una actividad</string>
    <string name="ver_actividades">Ver actividades</string>
</resources>